--- a/kardland.css
+++ b/kardland.css
@@ -55,19 +55,19 @@ html, body
 a:link
 {
 	text-decoration: none;
-    color: black;
+    color: #C00;
 }
 
 a:visited
 {
 	text-decoration: none;
-    color: black;
+    color: #C00;
 }
 
 a:hover
 {
 	text-decoration: none;
-    color: #C00;
+    color: white;
 }
 
 a:active
@@ -214,7 +214,7 @@ input[type="text"], input[type="password"]
 	font-family: arial;
 	font-size: 15px;
 	font-weight: bold;
-	color: rgba(255,255,255,0.7);
+	color: rgba(0, 0, 0, 0.67);
 	padding: 4px;
 	text-align: right;
 }
